url-loader base64处理

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -8,6 +8,7 @@ ul,li {list-style:none;}
     height: 400px;
     margin: 0 auto;
     border: 1px solid #333;
+    background: url('../assets/images/timg.jpg') no-repeat;
 }
 .inner {
     width: 300px;
