--- a/src/assets/css/festival.styl
+++ b/src/assets/css/festival.styl
@@ -36,7 +36,7 @@ img {
 .page1 .flower {  /*花*/
     left: 0;
     top: 0;
-    whRem(315,324)
+    whRem(400,460)
     z-index: 2
 }
 .page1 .s1 {
@@ -46,17 +46,15 @@ img {
     z-index:1;
 }
 .page1 .s1-t1 {
-    width:60px;
-    height:110px;
-    left:220px;
-    top:185px;
+    whRem(127,249)
+    right:p2r(100);
+    top:p2r(410);
     z-index:3;
 }
 .page1 .s1-t2 {
-    width:100px;
-    height:110px;
-    left:70px;
-    top:185px;
+    whRem(208,234)
+    left:p2r(100);
+    top:p2r(410);
     z-index:3;
 }
 
