元宵佳节的布局

--- a/src/assets/css/festival.styl
+++ b/src/assets/css/festival.styl
@@ -58,6 +58,113 @@ img {
     z-index:3;
 }
 
+/*第二屏*/
+.page2 .s2-i1 {
+    whRem(80,443)
+    right: p2r(54);
+    top: p2r(70);
+    z-index: 1;
+}
+.page2 .s2-i2 {
+    whRem(120,485)
+    right: p2r(40);
+    top: p2r(56);
+    z-index: 2;
+}
+.page2 .s2-i3 {
+    whRem(420,420)
+    left: p2r(50);
+    top: p2r(80);
+    z-index: 2;
+}
+.page2 .s2-i4 {
+    whRem(390,370)
+    left: p2r(70);
+    top: p2r(100);
+    z-index: 3;
+}
+.page2 .s2-i5 {
+    whRem(563,375)
+    left: 50%;
+    margin-left: p2r(-281.5)
+    bottom: p2r(110);
+    z-index: 3;
+    border-radius: p2r(30)
+}
+
+/*第三屏*/
+.page3 .s3-i1 {
+    whRem(80,443)
+    right: p2r(54);
+    top: p2r(70);
+    z-index: 1;
+}
+.page3 .s3-i2 {
+    whRem(120,485)
+    right: p2r(40);
+    top: p2r(56);
+    z-index: 2;
+}
+.page3 .s3-i3 {
+    whRem(420,420)
+    left: p2r(50);
+    top: p2r(80);
+    z-index: 2;
+}
+.page3 .s3-i4 {
+    whRem(390,370)
+    left: p2r(70);
+    top: p2r(100);
+    z-index: 3;
+}
+.page3 .s3-i5 {
+    whRem(563,375)
+    left: 50%;
+    margin-left: p2r(-281.5)
+    bottom: p2r(110);
+    z-index: 3;
+    border-radius: p2r(30)
+}
+
+/*第四屏*/
+.page4 .flower {  /*花*/
+    left: 0;
+    top: 0;
+    whRem(400,460)
+    z-index: 2
+}
+.page4 .s1 {
+    whRem(640,467)
+    left:0px;
+    top:p2r(300);
+    z-index:1;
+}
+.page4 .poem {
+    position: absolute;
+    whRem(400,249)
+    left:p2r(200);
+    top:p2r(390);
+    z-index:3;
+    p {
+        width:15px;
+        color:#b60927; 
+        display:inline-block; 
+        font-size:p2r(32); 
+        line-height:p2r(36); 
+        margin-right:15px;
+    }
+}
+.page4 .fes-tit {
+    position: absolute;
+    whRem(40,234)
+    right:p2r(100);
+    top:p2r(400);
+    color:#b60927;
+    font-size:p2r(60);
+    line-height: p2r(90);
+    font-weight: bold;
+    z-index:3;
+}
 
 /*底部的动画箭头*/
 @keyframes tipmove{
