--- a/src/assets/css/news.styl
+++ b/src/assets/css/news.styl
@@ -16,6 +16,13 @@ header {
 	box-shadow:3px 3px 3px rgba(0,0,0,0.2);
 }
 header .swiper-slide {
+	display: inline-block;
 	padding:0 20px;
 	width:auto;
+	flex: 0 0 auto;
+}
+
+
+.focus .swiper-slide img {
+	max-width: 100%;
 }
