每日优鲜效果

--- a/src/assets/css/fresh.styl
+++ b/src/assets/css/fresh.styl
@@ -35,7 +35,7 @@ body {
 }
 
 #nav {
-    border-bottom: 1px solid #ebebe;
+    border-bottom: 1px solid #ebebeb;
 }
 #nav .swiper-slide span {
     margin: 0 5px;
@@ -56,6 +56,22 @@ body {
 	margin:0 auto;
 	height:3px;
 	background:#ff4891;
+}
+
+/* 最外层swiper */
+#page {
+    margin-bottom: 50px;
+    height: 100%;
+}
+#page .slidepage {
+    height: 100%;
+}
+.scroll {
+    height: 100%;
+    padding-top: 72px;
+}
+.slidescroll {
+    height:auto;
 }
 
 #footer {
